tests/baselines/reference/interfaceThatInheritsFromItself.errors.txt
==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatInheritsFromItself.ts (8 errors) ====
    interface Foo extends Foo { // error
              ~~~
!!! error TS2310: Type 'Foo' recursively references itself as a base type.
    }
    
    interface Foo2<T> extends Foo2<T> { // error
              ~~~~
!!! error TS2310: Type 'Foo2<T>' recursively references itself as a base type.
    }
    
    interface Foo3<T> extends Foo3<string> { // error
              ~~~~
!!! error TS2310: Type 'Foo3<T>' recursively references itself as a base type.
    }
    
    interface Bar implements Bar { // error
                  ~~~~~~~~~~
!!! error TS1005: '{' expected.
                             ~~~
!!! error TS1005: ';' expected.
                                 ~
!!! error TS1005: ';' expected.
                  ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                             ~~~
!!! error TS2304: Cannot find name 'Bar'.
    }
    
    